[metadata]
name = LoRaRF
version = 2.0.0
author = Chandra Wijaya Sentosa
author_email = chandra.w.sentosa@gmail.com
description = Python library used for basic transmitting and receiving data using LoRa modem
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chandrawi/LoRaRF-Python
project_urls = Bug Tracker = https://github.com/chandrawi/LoRaRF-Python/issues
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Topic :: System :: Hardware
    Topic :: System :: Hardware :: Hardware Drivers

[options]
include_package_data = True
packages = 
    LoRaRF
python_requires = >=3.9
install_requires =
    spidev
    gpiod >=2.0.2
